--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
-imageio==2.8.0
-imageio-ffmpeg==0.4.2
-moviepy==1.0.3
-numpy==1.19.0
-open3d==0.10.0.0
-opencv-contrib-python==4.4.0.42
-pandas==1.0.5
-pydantic==1.5.1
-pygame==1.9.6
-pyserial==3.4
-scipy==1.5.2
-sympy~=1.7.1
-deprecated~=1.2.11
-opencv-python~=4.4.0.42
-plotly~=4.14.3
-pyrealsense2~=2.38.1.2225
-pillow~=8.1.0
-prettytable~=2.0.0
+gym==0.21.0
+numpy==1.21.6
+open3d==0.15.1
+pygame==2.1.2
+stable-baseline3==1.5.0
+tensorboard==2.9.1
+torch==1.11.0
+torchvision==0.12.0
+wandb<=0.12.11 #very important, wandb upgrade breaks the tensorboardX keyword in wandb and turns it into tensorboard_x
